--- a/MyApplication/app/src/main/res/layout/activity_login.xml
+++ b/MyApplication/app/src/main/res/layout/activity_login.xml
@@ -1,82 +1,91 @@
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
-    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    android:paddingBottom="@dimen/activity_vertical_margin"
+<?xml version="1.0" encoding="utf-8"?>
+
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="fill_parent"
+    android:layout_height="fill_parent"
+    android:fitsSystemWindows="true"
     tools:context="com.example.julie.myapplication.LoginActivity">
 
-    <TextView android:text="@string/login_title" android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textAlignment="center"
-        android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true"
-        android:textSize="20dp"
-        android:id="@+id/tvLoginTitle" />
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/login_email"
-        android:id="@+id/tvLoginEmail"
-        android:textSize="20dp"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:layout_marginTop="40dp" />
-
-    <EditText
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:inputType="textEmailAddress"
-        android:ems="10"
-        android:id="@+id/etLoginEmail"
-        android:layout_alignBottom="@+id/tvLoginEmail"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentEnd="true"
-        android:hint="@string/login_enterEmail" />
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/login_password"
-        android:id="@+id/tvLoginPassword"
-        android:layout_below="@+id/tvLoginEmail"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:layout_marginTop="33dp"
-        android:textSize="20dp" />
-
-    <EditText
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:inputType="textPassword"
-        android:ems="10"
-        android:id="@+id/etLoginPassword"
-        android:layout_alignBottom="@+id/tvLoginPassword"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentEnd="true" />
-
-    <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/login_loginButton"
-        android:id="@+id/btnLoginLogin"
-        android:layout_below="@id/etLoginPassword"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="44dp" />
-
-    <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/login_singupButton"
-        android:id="@+id/btnLoginSingup"
-        android:layout_marginTop="43dp"
-        android:layout_below="@id/btnLoginLogin"
-        android:layout_alignRight="@id/tvLoginTitle"
-        android:layout_alignEnd="@id/tvLoginTitle"
-        android:layout_alignLeft="@id/tvLoginTitle"
-        android:layout_alignStart="@id/tvLoginTitle" />
+    <LinearLayout
+        android:orientation="vertical"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:paddingTop="56dp"
+        android:paddingLeft="24dp"
+        android:paddingRight="24dp">
 
 
+        <!--  Email Label -->
 
-</RelativeLayout>
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="0dp"
+            android:text="@string/login_textLogin"
+            android:id="@+id/tvLogin"
+            android:layout_weight="1" />
+
+        <android.support.design.widget.TextInputLayout
+            android:background="@color/iron"
+            android:layout_width="match_parent"
+            android:layout_height="37dp"
+            android:layout_marginTop="8dp"
+            android:layout_marginBottom="8dp"
+            android:layout_weight="1">
+
+            <EditText android:id="@+id/etLoginEmail"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:inputType="textEmailAddress"
+                android:hint="@string/login_enterEmail" />
+        </android.support.design.widget.TextInputLayout>
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="0dp"
+            android:text="@string/login_textPassword"
+            android:id="@+id/tvPassword"
+            android:layout_weight="1" />
+        <!--  Password Label -->
+
+        <android.support.design.widget.TextInputLayout
+            android:background="@color/iron"
+            android:layout_width="match_parent"
+            android:layout_height="36dp"
+            android:layout_marginTop="8dp"
+            android:layout_marginBottom="8dp"
+            android:layout_weight="1">
+            <EditText android:id="@+id/etLoginPassword"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:inputType="textPassword"
+                android:hint="@string/login_password"/>
+        </android.support.design.widget.TextInputLayout>
+
+
+        <android.support.v7.widget.AppCompatButton
+            android:background="@color/button"
+            android:id="@+id/btnLogin"
+            android:layout_width="336dp"
+            android:layout_height="0dp"
+            android:padding="12dp"
+            android:text="@string/login_loginButton"
+
+
+            android:focusable="false"
+            android:clickable="false"
+            android:layout_weight="1" />
+
+        <TextView android:id="@+id/btnLoginSingup"
+            android:layout_width="fill_parent"
+            android:layout_height="0dp"
+            android:layout_marginBottom="24dp"
+            android:text="@string/login_singupButton"
+            android:gravity="center"
+            android:textSize="16dip"
+            android:layout_marginTop="20dp"
+            android:layout_weight="1" />
+
+    </LinearLayout>
+</ScrollView>
