--- a/MyApplication/app/src/main/res/values/styles.xml
+++ b/MyApplication/app/src/main/res/values/styles.xml
@@ -9,6 +9,7 @@
 
 
         <item name="android:windowBackground">@color/primary</item>
+        <item name="android:editTextColor">@color/black</item>
 
 
         <item name="colorControlActivated">@color/white</item>
