--- a/MyApplication/app/src/main/res/values/styles.xml
+++ b/MyApplication/app/src/main/res/values/styles.xml
@@ -6,16 +6,33 @@
     <style name="AppTheme" parent="Theme.AppCompat.NoActionBar">
         <item name="colorPrimary">@color/primary</item>
         <item name="colorPrimaryDark">@color/primary_dark</item>
-
-
         <item name="android:windowBackground">@color/primary</item>
-        <item name="android:editTextColor">@color/black</item>
-
-
-        <item name="colorControlActivated">@color/white</item>
+         <item name="colorControlActivated">@color/white</item>
         <item name="colorControlHighlight">@color/white</item>
         <item name="android:textColorHint">@color/base</item>
     </style>
+    <style name="EditText" parent="android:Widget.EditText">
+
+        <item name ="android:background">@color/editText</item>
+        <item name ="android:layout_width">match_parent</item>
+        <item name ="android:layout_height">38dp</item>
+        <item name ="android:layout_marginTop">8dp</item>
+        <item name ="android:layout_marginBottom">8dp</item>
+
+        <item name="android:textColor">@color/oil</item>
+
+    </style>
+    <style name="Button" parent="android:Widget.Button">
+
+        <item name ="android:background">@color/button</item>
+        <item name="android:layout_width">fill_parent</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:padding">12dp</item>
+        <item name="android:textColor">@color/white</item>
+        <item name="android:layout_marginTop">24dp</item>
+        <item name="android:layout_marginBottom">24dp</item>
+    </style>
+
 
 
 
