--- a/MyApplication/app/src/main/res/layout/activity_list_classes.xml
+++ b/MyApplication/app/src/main/res/layout/activity_list_classes.xml
@@ -6,10 +6,7 @@
 
     <TableLayout
         android:id="@+id/tableClasses"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:background="@color/jumbo"
-        android:stretchColumns="*">
+        style="@style/Table">
 
         <TextView
             android:layout_width="wrap_content"
@@ -24,13 +21,14 @@
             android:layout_height="wrap_content"    >
             <TextView
                 style =  "@style/Cell"
-                android:text="FROM" />
+                android:text="@string/time" />
             <TextView
                 style =  "@style/Cell"
-                android:text="LESSON" />
+                android:text="@string/lesson" />
             <TextView
                 style =  "@style/Cell"
-                android:text="ROOM" />
+                android:text="@string/room" />
         </TableRow>
+
     </TableLayout>
 </ScrollView>
