--- a/MyApplication/app/src/main/res/layout/activity_login.xml
+++ b/MyApplication/app/src/main/res/layout/activity_login.xml
@@ -16,6 +16,13 @@
         android:paddingLeft="24dp"
         android:paddingRight="24dp">
 
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/login"
+            android:textSize="80px"
+            android:id="@+id/tvTittleLogin" />
+
 
         <!--  Email Label -->
         <android.support.design.widget.TextInputLayout
