--- a/MyApplication/app/src/main/res/layout/activity_login.xml
+++ b/MyApplication/app/src/main/res/layout/activity_login.xml
@@ -58,6 +58,11 @@
 
             android:text="@string/loginButton" />
 
+        <CheckBox android:id="@+id/cbSaveLogin"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/saveLogin"/>
+
         <TextView android:id="@+id/tvLoginSingup"
             android:layout_width="fill_parent"
             android:layout_height="0dp"
