--- a/MyApplication/app/src/main/res/values/styles.xml
+++ b/MyApplication/app/src/main/res/values/styles.xml
@@ -20,7 +20,7 @@
         <item name="android:textColor">@color/oil</item>
     </style>
 
-    <!-- Button theme. -->
+    <!-- Buttons theme. -->
     <style name="Button" parent="android:Widget.Button">
         <item name ="android:background">@color/button</item>
         <item name="android:layout_width">fill_parent</item>
@@ -31,12 +31,11 @@
         <item name="android:layout_marginBottom">24dp</item>
     </style>
 
-    <!-- Base application theme. -->
     <style name="ButtonDay" parent="Button">
         <item name="android:layout_margin">3dp</item>
-
-
     </style>
+
+    <!-- Cell & Table theme. -->
     <style name = "Cell">
         <item name="android:layout_width">80dp</item>
         <item name="android:layout_height">wrap_content</item>
@@ -54,10 +53,6 @@
         <item name="android:layout_height">wrap_content</item>
         <item name="android:background">@color/jumbo</item>
         <item name="android:stretchColumns">*</item>
-
-
     </style>
-
-
 
 </resources>
