add table "type" add new .sql file with actual schedule.

--- a/MyApplication/app/src/main/res/layout/activity_list_classes.xml
+++ b/MyApplication/app/src/main/res/layout/activity_list_classes.xml
@@ -28,6 +28,9 @@
             <TextView
                 style =  "@style/Cell"
                 android:text="@string/room" />
+            <TextView
+                style =  "@style/Cell"
+                android:text="@string/type" />
         </TableRow>
 
     </TableLayout>
