--- a/MyApplication/app/src/main/res/layout/activity_main.xml
+++ b/MyApplication/app/src/main/res/layout/activity_main.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    android:orientation="vertical"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
     android:fitsSystemWindows="true"
@@ -28,8 +29,9 @@
             android:id="@+id/btnSignUp"
             android:text="@string/createButton"/>
 
-        <TextView android:text="@string/login_text" android:layout_width="wrap_content"
-            android:layout_height="match_parent"
+        <TextView android:text="@string/login_text"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:textAlignment="center"
             android:layout_marginLeft="160dp"
             android:textSize="15dp"/>
@@ -38,4 +40,4 @@
             android:id="@+id/btnLogin"
             android:text="@string/loginButton"/>
     </LinearLayout>
-</ScrollView>
+</LinearLayout>
