--- a/MyApplication/app/src/main/res/layout/activity_view.xml
+++ b/MyApplication/app/src/main/res/layout/activity_view.xml
@@ -1,10 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:fillViewport="false">
-
-
+    android:fillViewport="false"
+    android:orientation="vertical">
+    <android.support.v7.widget.Toolbar
+        android:id="@+id/toolbar"
+        android:background="@color/toolbar"
+        android:minHeight="?attr/actionBarSize"
+        android:layout_width="match_parent"
+        android:layout_height="?android:actionBarSize"/>
 
     <TableLayout
         android:layout_width="match_parent"
@@ -52,4 +57,4 @@
 
 
     </TableLayout>
-</ScrollView>
+</LinearLayout>
