add swiping pages in ListClasses add "plus"

--- a/MyApplication/app/src/main/res/layout/fragment_classes_list.xml
+++ b/MyApplication/app/src/main/res/layout/fragment_classes_list.xml
@@ -14,7 +14,7 @@
         android:weightSum="1">
 
         <Button
-            android:layout_width="44dp"
+            android:layout_width="45dp"
             android:layout_height="match_parent"
             android:background="@drawable/ic_left"
             android:id="@+id/btnleft" />
@@ -25,19 +25,22 @@
             android:gravity="center"
             android:background="@color/iron"
             android:textSize="30dp"
+
             android:text="Today"
             android:id="@+id/tvDay"
             android:layout_column="1"
             android:layout_weight="0.98" />
 
         <Button
-            android:layout_width="49dp"
-            android:layout_height="35dp"
+            android:layout_width="45dp"
+            android:layout_height="match_parent"
             android:background="@drawable/ic_right"
-            android:id="@+id/btnright"
-            android:layout_gravity="right" />
+            android:id="@+id/btnright" />
 
     </LinearLayout>
+
+
+
 
     <TableLayout
         android:id="@+id/tableClasses"
