--- a/MyApplication/app/src/main/res/layout/recycle_item.xml
+++ b/MyApplication/app/src/main/res/layout/recycle_item.xml
@@ -20,7 +20,7 @@ xmlns:card_view="http://schemas.android.com/apk/res-auto"
 <TextView
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:id="@+id/textView"
+    android:id="@+id/schedule_name"
     android:textColor="@color/black"
     android:textSize="20dp"
     android:layout_alignParentTop="true"
