--- a/MyApplication/app/src/main/res/layout/content_schedule_list.xml
+++ b/MyApplication/app/src/main/res/layout/content_schedule_list.xml
@@ -10,18 +10,12 @@
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:context="com.example.julie.myapplication.ScheduleListActivity"
     tools:showIn="@layout/activity_schedule_list">
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/choose_schedule"
-        android:paddingLeft="5dp"
-        android:textSize="80px"
-        android:id="@+id/tvTittleLogin" />
+
     <android.support.v7.widget.RecyclerView
         android:id="@+id/recycler_view"
         android:scrollbars="vertical"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
         android:padding="10dp"/>
 </LinearLayout>
 
