--- a/MyApplication/app/src/main/res/layout/activity_new_class.xml
+++ b/MyApplication/app/src/main/res/layout/activity_new_class.xml
@@ -5,7 +5,7 @@
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
     android:fitsSystemWindows="true"
-    tools:context="com.example.julie.myapplication.SignupActivityActivity">
+    tools:context="com.example.julie.myapplication.NewClassActivity">
 
     <LinearLayout
         android:orientation="vertical"
