--- a/MyApplication/app/src/main/res/layout/activity_signup.xml
+++ b/MyApplication/app/src/main/res/layout/activity_signup.xml
@@ -58,7 +58,7 @@
             android:layout_marginBottom="8dp">
         <EditText android:id="@+id/etSignUpCourse"
             style = "@style/EditText"
-            android:inputType="textCapWords"
+            android:inputType="number"
             android:hint="@string/signup_course"/>
 
         </android.support.design.widget.TextInputLayout>
@@ -69,7 +69,7 @@
             android:layout_marginBottom="8dp">
         <EditText android:id="@+id/etSignUpGroup"
             style = "@style/EditText"
-            android:inputType="textCapWords"
+            android:inputType="number"
             android:hint="@string/signup_group"/>
         </android.support.design.widget.TextInputLayout>
 
