--- a/MyApplication/app/src/main/res/layout/activity_signup.xml
+++ b/MyApplication/app/src/main/res/layout/activity_signup.xml
@@ -97,6 +97,18 @@
                 android:hint="@string/password"/>
         </android.support.design.widget.TextInputLayout>
 
+        <!-- Confirm Password Label -->
+        <android.support.design.widget.TextInputLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="8dp"
+            android:layout_marginBottom="8dp">
+            <EditText android:id="@+id/etSignUpConfirmPassword"
+                style = "@style/EditText"
+                android:inputType="textPassword"
+                android:hint="@string/confirm_password"/>
+        </android.support.design.widget.TextInputLayout>
+
         <!-- Signup Button -->
         <android.support.v7.widget.AppCompatButton
             style = "@style/Button"
